# books-db

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  dev-app-update.yml  drizzle.config.ts  electron-builder.yml  electron.vite.config.mts  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  vitest.config.js  vitest.diff.ts
.github/workflows/: vitest.js.yml
.storybook/: main.ts  preview.ts
e2e/: test.e2e.ts  tsconfig.json  wdio.conf.ts
migrations/: 20241107023909_add_books_table.sql  20241114200715_addScanDate.sql  20241127071531_add_books_createdAt.sql  20241130220908_books_replace_hadRead_with_readAt.sql  20241208022602_rework_book_tags_as_table.sql
migrations/meta/: 20241107023909_snapshot.json  20241114200715_snapshot.json  20241121221707_snapshot.json  20241127071531_snapshot.json  20241130220908_snapshot.json  20241208022602_snapshot.json  _journal.json
renderer/: App.svelte  main.ts
renderer/lib/: openLibrary.ts
renderer/state/: Books.spec.ts
src-tauri/: .Cargo.toml.un~  .gitignore  Cargo.toml  Cargo.toml~  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/migrations/: lib.rs
src-tauri/src/plugins/: mod.rs  test.rs
src-tauri/src/plugins/sqlite_proxy/: commands.rs  error.rs  json_param.rs  lib.rs  migrations.rs  mod.rs  plugin.rs
src-ui/: hooks.client.ts  index.html
src-ui/components/: BooksTable.svelte
src-ui/lib/: openLibrary.spec.ts  openLibrary.ts  type_helpers.ts
src-ui/lib/components/: AddBookModal.svelte  BooksTable.svelte  BooksTableRow.svelte
src-ui/lib/db/: index.ts  migrator.ts  relations.ts  schema.ts  test_helpers.ts
src-ui/routes/: +layout.svelte  +layout.ts  +page.svelte
src-ui/state/: Books.svelte.ts
src-ui/stories/: Page.stories.ts  Page.svelte
src-ui/testing/: msw-setup.ts
src/lib/: book.mts  book.spec.mts
src/main/: index.ts
src/renderer/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
(+30 files in other folders)
