[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.2", features = ["test"] }
futures-core = "0.3.30"
anyhow = "1.0.89"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json", "modern-full"] }
thiserror = "1.0.64"
log = "0.4.22"
indexmap = "2.6.0"
serde_rusqlite = "0.36.0"
pretty_env_logger = "0.5.0"
specta = { version = "2.0.0-rc.20", features= ["serde_json"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

[dev-dependencies]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
